# csci150

./: .gitignore  2022-02-16-While-loops.py  2022-03-11-Exam-2-Practice-Solutions.py  2026-02-13-While-and-Function-Stack.py  Gemfile  IDEAS.org  _config.yml  acrk-course-difficulties.ipynb  calendar.yaml  csci340.md  index-S22.md  index-S23.md  index-S23.md.old  index.html  index.md  lab-project-rubric.tex  python_style_guide.html  rtree.py  search_demo.html  search_demo.md  style.css
homework/minecraft/: ChangeLog.md  Minecraft.hs  minecraft.cabal  stack.yaml  world1.mc
web/: LICENSE  build  deploy  exams.md  grading.md  hakyll.hs  inclass.md  index.md  labs.md  overview.md  projects.md  quizhw.md  stack.yaml  syllabus.md  watch  web150.cabal
web/css/: mgoadric-style.css  style.css
web/data/: dictionary.py  histone_h4.txt
web/labs/: caesar.html  civic-data-hacking.html  debugging.html  doublets.html  dow.html  final.html  fractal.html  guess.html  heart-disease.html  kepler-newton.html  lab1.html  lab5.html  line-editor.html  minecraft.html  processing.html  sentiment.html  todo-manager.html  waterjug.html
web/projects/: civic-QA.html  final.html  word-game.html
web/static/: Box.py  Cake.py  Card.py  Conditionals.py  Deck.py  Link.py  LinkedQueue.py  ListQueue.py  Passenger.py  Player.py  Queue.py  TrafficLight.py  TrafficLights.py  booleans.txt  bouncy.pyde  box-functions.py  box-functions.txt  box.py  box_volume.py  cake.py  cards.py  circle.pyde  collatz.py  collatz2.py  collatz_functions.py  conditionals-old.py  conditionals.py  dictionaries-repl-F18.txt  (+39 more)
(+976 files in other folders)
