name:                web150
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/byorgey/web410#readme
license:             BSD3
license-file:        LICENSE
author:              Brent Yorgey
maintainer:          byorgey@gmail.com
copyright:           2016 Brent Yorgey
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hakyll
  main-is:             hakyll.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, hakyll >= 4.11, hakyll-course
