name:                minecraft
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Brent Yorgey
maintainer:          byorgey@gmail.com
category:            Graphics
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable minecraft
  main-is:             Minecraft.hs
  other-extensions:    FlexibleContexts, NoMonomorphismRestriction, TypeFamilies
  build-depends:       base >=4.10 && <4.11,
                       directory >=1.3 && <1.4,
                       filepath >= 1.4 && < 1.5,
                       containers >=0.5 && <0.6,
                       diagrams-lib >= 1.4 && < 1.5,
                       diagrams-rasterific >= 1.4 && < 1.5
  default-language:    Haskell2010
